modulo2/projeto1/subnet.tf
resource "aws_subnet" "main" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.subnet_cidr
  map_public_ip_on_launch = true
  availability_zone       = "${var.config[var.env].region}a"

  tags = merge(
    local.tags_comuns,
    {
      Name = "subnet-${var.env}"
    }
  )
}
